--- a/style.css
+++ b/style.css
@@ -6,40 +6,42 @@
 
 h1 {
     text-align: center;
+    margin-top: 2rem;
 }
 
 .grid-container {
     display: grid;
-    /* flex-wrap: wrap; */
-    /* align-items: stretch;
-    align-content: stretch; */
     border: 5px solid black;
     margin: 0 auto 0;
-    width: 25vw;
-    height: 200px;
+    width: 50vw;
+    height: 50vh;
     margin-top: 2rem;
 }
 
 .box {
-    /* width: 20px;
-    height: 20px; */
-    border: 1px solid blue;
-    /* flex: 1; */
+    border: 0.5px solid black;
 }
 
-/* .default {
-    display: grid;
-    grid-template-rows: repeat(16, 20px);
-    grid-template-columns: repeat(16, 20px);
-    /* grid-auto-rows: 50px;
-    grid-auto-columns: 50px;
-    gap: 5px;
-} */
-
 .colored {
-    background-color: green;
+    background-color: grey;
 }
 
 .hovered {
     background-color: white;
+}
+
+.clicked {
+    background-color: lime;
+}
+
+.button-container {
+    display: flex;
+    margin: 2rem auto 0;
+    width: 75vw;
+    justify-content: space-evenly;
+}
+
+.button {
+    background-color: lightgrey;
+    padding: 0.5rem;
 }
